[package]
name = "tubepeek-server-rust"
version = "0.1.0"
authors = ["Efe Ariaroo <efeariaroo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.9.0"
lazy_static = "1.4.0"
chrono = "0.4.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
